--- a/web/src/styles/index.module.css
+++ b/web/src/styles/index.module.css
@@ -1,5 +1,8 @@
 .bg{
     background-image: url('../img/bg.jpg');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
 }
